# licensing

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt  patch_botan_cmakelists.py
doc/: botan-example.md
include/licensing/: licensing.h  vendor.h
src/: licensing.cpp  vendor.cpp
tests/: CMakeLists.txt  main.cpp
